// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualizedWallet Given connected and account, then renders with router 1`] = `
<Dashboard
  menuBottom={
    Array [
      Object {
        "exact": true,
        "icon": Object {
          "background": Object {
            "from": "#7a90cb",
            "to": "#3b6cf4",
          },
          "icon": Object {
            "id": "settings",
          },
        },
        "id": "settings",
        "text": "Settings",
        "to": "/user/settings",
      },
      Object {
        "exact": true,
        "icon": Object {
          "background": Object {
            "from": "#7a90cb",
            "to": "#3b6cf4",
          },
          "icon": Object {
            "id": "recovery",
          },
        },
        "id": "recovery",
        "onClick": [Function],
        "text": "Recovery",
        "to": "/user/recovery",
      },
    ]
  }
  menuMiddle={
    Array [
      Object {
        "exact": true,
        "icon": Object {
          "height": "auto",
          "icon": Object {
            "hasVariants": true,
            "id": "shield",
          },
          "width": "auto",
        },
        "id": "protection",
        "onClick": [Function],
        "text": "My Logion Protection",
        "to": "/user/protection",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "home",
          },
        },
        "id": "home",
        "onClick": [Function],
        "text": "Home",
        "to": "/user",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "wallet",
          },
        },
        "id": "wallet",
        "onClick": [Function],
        "text": "Wallet",
        "to": "/user/wallet",
      },
      Object {
        "disabled": true,
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "vault",
          },
        },
        "id": "vault",
        "onClick": [Function],
        "text": "Vault",
        "to": "/user/vault",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "collection",
          },
        },
        "id": "loc-collection",
        "onClick": [Function],
        "text": "Collections",
        "to": "/user/loc/collection",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "loc",
          },
        },
        "id": "loc-transaction",
        "onClick": [Function],
        "text": "Transactions",
        "to": "/user/loc/transaction",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "identity",
          },
        },
        "id": "loc-identity",
        "onClick": [Function],
        "text": "Identity",
        "to": "/user/loc/identity",
      },
    ]
  }
>
  <UserRouter />
</Dashboard>
`;

exports[`ContextualizedWallet Given connected and no account then renders without router 1`] = `null`;

exports[`ContextualizedWallet Given disconnected and accounts then empty 1`] = `
<Dashboard
  menuBottom={
    Array [
      Object {
        "exact": true,
        "icon": Object {
          "background": Object {
            "from": "#7a90cb",
            "to": "#3b6cf4",
          },
          "icon": Object {
            "id": "settings",
          },
        },
        "id": "settings",
        "text": "Settings",
        "to": "/user/settings",
      },
      Object {
        "exact": true,
        "icon": Object {
          "background": Object {
            "from": "#7a90cb",
            "to": "#3b6cf4",
          },
          "icon": Object {
            "id": "recovery",
          },
        },
        "id": "recovery",
        "onClick": [Function],
        "text": "Recovery",
        "to": "/user/recovery",
      },
    ]
  }
  menuMiddle={
    Array [
      Object {
        "exact": true,
        "icon": Object {
          "height": "auto",
          "icon": Object {
            "hasVariants": true,
            "id": "shield",
          },
          "width": "auto",
        },
        "id": "protection",
        "onClick": [Function],
        "text": "My Logion Protection",
        "to": "/user/protection",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "home",
          },
        },
        "id": "home",
        "onClick": [Function],
        "text": "Home",
        "to": "/user",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "wallet",
          },
        },
        "id": "wallet",
        "onClick": [Function],
        "text": "Wallet",
        "to": "/user/wallet",
      },
      Object {
        "disabled": true,
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "vault",
          },
        },
        "id": "vault",
        "onClick": [Function],
        "text": "Vault",
        "to": "/user/vault",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "collection",
          },
        },
        "id": "loc-collection",
        "onClick": [Function],
        "text": "Collections",
        "to": "/user/loc/collection",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "loc",
          },
        },
        "id": "loc-transaction",
        "onClick": [Function],
        "text": "Transactions",
        "to": "/user/loc/transaction",
      },
      Object {
        "exact": false,
        "icon": Object {
          "background": Object {
            "from": "#3b6cf4",
            "to": "#6050dc",
          },
          "icon": Object {
            "id": "identity",
          },
        },
        "id": "loc-identity",
        "onClick": [Function],
        "text": "Identity",
        "to": "/user/loc/identity",
      },
    ]
  }
/>
`;
